--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "devDependencies": {
-    "enzyme": "^3.1.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react-scripts": "1.0.17",
-    "react-test-renderer": "^16.1.1"
+    "react-test-renderer": "^16.2.0"
   },
   "dependencies": {
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "@types/enzyme": "^3.1.6",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/react-test-renderer": "^16.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.2",
+    "react-scripts-ts": "^2.8.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
